--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/lab": "5.0.0-alpha.148",
     "@mui/material": "^5.14.12",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.5.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
@@ -24,6 +26,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/node": "^20.8.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/validator": "^13.11.3",
