feat: criado autenticação do usuário, contexts globais e iniciando customização de componentes

--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
-    "@mui/lab": "5.0.0-alpha.148",
+    "@mui/lab": "5.0.0-alpha.149",
     "@mui/material": "^5.14.12",
+    "@mui/x-date-pickers": "^6.16.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
