--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-fade-in": "^2.0.1",
+    "react-input-mask": "^2.0.4",
+    "react-intl-currency-input": "^0.3.3",
+    "react-number-format": "^4.4.1",
     "react-router-dom": "^6.16.0",
     "recharts": "^2.8.0",
     "validator": "^13.11.0"
@@ -32,6 +36,7 @@
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-input-mask": "^3.0.4",
     "@types/validator": "^13.11.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
